welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: '<-' expected but ')' found.
	for (0 to taille-1) {
                          ^indexOfValue:10: error: illegal start of simple expression
}
^