welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	for (0 to taille-1) {
	if (value == lookingFor) return value
	else return -1
		
	}



}
